[package]
authors = ['Unique One <hello@uniqueone.network>']
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-orml-currencies'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '0.4.1-dev'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
unet-orml-traits = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-traits" }
unet-orml-utilities = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-utilities" }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
unet-orml-tokens = { version = "0.4.1-dev", package = "unet-orml-tokens", path = "../unet-orml-tokens" }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
    "sp-io/std",
	"sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
	"unet-orml-traits/std",
    "unet-orml-utilities/std",

]
