[package]
authors = ['Unique One <hello@uniqueone.network>']
description = "Fungible tokens module that implements `MultiCurrency` trait."
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-orml-tokens'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '0.4.1-dev'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
unet-orml-traits = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-traits" }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-elections-phragmen = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	'sp-std/std',
    "sp-runtime/std",
    'frame-support/std',
    'frame-system/std',
	'unet-orml-traits/std',

]
