[package]
authors = ['Unique One <hello@uniqueone.network>']
description = "Various utilities including `FixedU128` and `LinkedList`."
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-orml-traits'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = "0.4.1-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = "1.0.136", optional = true }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }

sp-std = { version = "4.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-runtime = { version = "6.0.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
frame-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.30', default-features = false }

num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.2"

unet-orml-utilities = { version = "0.4.1-dev", default-features = false, path = "../unet-orml-utilities" }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	'sp-std/std',
    "sp-runtime/std",
    "sp-io/std",
    'frame-support/std',
	"num-traits/std",
	"frame-support/std",
	"unet-orml-utilities/std",
]
