[package]
authors = ['Unique One <hello@uniqueone.network>']
edition = '2018'
homepage = 'https://uniqueone.network'
license = 'Apache-2.0'
name = 'unet-traits'
readme = 'README.md'
repository = 'https://github.com/Unique-One-Official/uniqueone-appchain'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.2', default-features = false, features = ['derive', 'max-encoded-len'] }
serde = { version = '1.0.130', default-features = false, features = ['derive'], optional = true }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
enumflags2 = { version = "0.6.3" }

sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
unet-orml-traits = { default-features = false, path = "../unet-orml-traits" }
contract-types = { path = "contract-types", default-features = false }
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"

[features]
default = ['std']
std = [
	"serde",
	"log/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
    "frame-support/std",
	"enumflags2/serde",
	"sp-runtime/std",
	"contract-types/std",
	"unet-orml-traits/std",

]
