[package]
name = "uniqueone-appchain-rpc-primitives-txpool"
authors = ['Unique One <hello@uniqueone.network>']
edition = "2018"
homepage = "https://uniqueone.network"
license = "GPL-3.0-only"
repository = "https://github.com/Unique-One-Official/uniqueone-appchain"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.9.0", default-features = false, features = [ "with-codec" ] }

# Substrate
codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = [ "std" ]
std = [
	"ethereum/std",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
